--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: crm-vendas-santiago
     env: node
     plan: free
-    buildCommand: pnpm install && pnpm build
+    buildCommand: pnpm config set only-allow-authenticated-updates false && pnpm install --no-frozen-lockfile && pnpm build
     startCommand: pnpm start
     envVars:
       - key: NODE_ENV
